sql-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      containers:
      - name: sql-server
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: armazenamentoSQL
          mouthPath: /app/data
      volumes:
        - name: armazenamentoSQL
          persistVolumeClaim:
            claimName: meu-pvc


          ---
apiVersion: v1
kind: LoadBalancer
metadata:
  name: sql-server-service
spec:
  selector:
    app: sql-server
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
